--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 html {
   font-family: Helvetica, sans-serif;
-  background-color: #ECEEF1;
-  color: #444444;
-  font-weight: 400;
+  background-color: #eceef1;
+  color: #444;
+  font-weight: 400px;
   margin: 20px;
 }
 
@@ -18,12 +18,10 @@ div.signup-text {
   padding: 10px;
   float: left;
   align-self: center;
-  display: grid;
-  grid-template-rows: 2;
 }
 
 a {
-  color: #0077C5;
+  color: #0077c5;
   text-decoration: none;
 }
 
@@ -34,14 +32,14 @@ a {
 
 button {
   align-items: center;
-  background-color: #0077C5;
+  background-color: #0077c5;
   color: white;
   border: 1px solid gray;
   border-radius: 4px;
 }
 
 button.submit {
-  width: 100px
+  width: 100px;
 }
 
 .padlock {
@@ -50,7 +48,7 @@ button.submit {
 
 main {
   margin: auto;
-  color: #6B6C72;
+  color: #6B6c72;
   padding: 3%;
   width: 400px;
   display: block;
@@ -60,8 +58,8 @@ main {
 
 .intuiticons1 {
   width: 150px;
-
 }
+
 .intuiticons2 {
   width: 350px;
   margin-bottom: 10px;
@@ -70,7 +68,7 @@ main {
 .form {
   background-color: white;
   padding: 15px;
-  border: 1px solid #C7C7C7;
+  border: 1px solid #c7c7c7;
   border-radius: 2px;
 }
 
@@ -99,7 +97,6 @@ form a {
 
 fieldset {
   border: none;
-  padding: auto;
   display: flex;
   font-size: 14px;
 }
@@ -117,7 +114,7 @@ label {
 
 .formfooter {
   border-top: none;
-  background-color: #ECEEF1;
+  background-color: #eceef1;
 }
 
 footer {
@@ -128,14 +125,14 @@ footer {
 }
 
 .footera {
-  color: #444444;
+  color: #444;
 }
 
 button.priv-btn {
   position: fixed;
   bottom: 0;
   right: 5%;
-  background-color: #6B6C72;
+  background-color: #6b6c72;
   width: 10%;
   height: 6%;
 }
