--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ html {
   font-family: Helvetica, sans-serif;
   background-color: #eceef1;
   color: #444;
-  margin: auto;
 }
 
 header {
@@ -13,15 +12,12 @@ header {
   height: 35px;
 } 
 
-header p{
-  margin:3px;
+header p {
+  margin: 3px;
   padding-right: 6px;
 }
 
 .signup-text {
-  //display:flex;
-  //flex-flow: column;
-  
   float: left;
   align-self: center;
 }
@@ -38,7 +34,6 @@ a {
 
 button {
   border: none;
-  align-items: center;
   background-color: #0077c5;
   color: white;
   border-radius: 4px;
@@ -54,26 +49,26 @@ button.submit {
 
 main {
   margin: auto;
+  display: block;
   color: #6b6c72;
   padding: 0%;
   width: 400px;
-  display: block;
   justify-content: center;
   text-align: center;
 }
 
 .intuiticons1 {
-  width: 150px;
+  margin-top: 20%;
+  width: 120px;
 }
 
 .intuiticons2 {
-  width: 350px;
+  width: 300px;
   margin-bottom: 10px;
 }
 
 .form {
   background-color: white;
-  margin: auto;
   padding: 30px;
   border: 1px solid #c7c7c7;
   border-radius: 2px;
@@ -85,7 +80,6 @@ form h1 {
 }
 
 form p {
-
   font-size: 13px;
   text-align: center;
 }
@@ -108,6 +102,7 @@ input {
 
 .inputtext {
   font-size: 10px;
+  text-align: left;
 }
 
 fieldset {
@@ -120,17 +115,19 @@ label {
   text-align: left;
 }
 
-
 .form-end {
-  line-height: 20px;
+  margin: 15px;
   padding-top: 20px;
+  line-height: 20px;
   font-style: italic;
-  margin: 20px;
 }
 
 .formfooter {
+  font-size: 10px;
   border-top: none;
+  padding: 3%;
   background-color: #eceef1;
+  margin-bottom: 30px;
 }
 
 footer {
@@ -155,6 +152,7 @@ button.priv-btn {
 
 .account-btn {
   width: 315px;
-  height: 40px;
+  height: 45px;
+  font-size: 15px;
 }
 
